현업형 API 구조 보강
